# libmbfl

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  DISCLAIMER  Makefile.am  Makefile.bcc32  NEWS  TODO  acinclude.m4  buildconf  config.h.bcc32  config.h.in  configure.in  cvsclean  libmbfl.dsp  libmbfl.dsw  libmbfl.sln  libmbfl.vcproj  mbfl.def  mbfl.rc  rules.mak.bcc32
filters/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.bcc32  cp932_table.h  emoji2uni.h  html_entities.c  html_entities.h  mbfilter_7bit.c  mbfilter_7bit.h  mbfilter_armscii8.c  mbfilter_armscii8.h  mbfilter_ascii.c  mbfilter_ascii.h  mbfilter_base64.c  mbfilter_base64.h  mbfilter_big5.c  mbfilter_big5.h  mbfilter_byte2.c  mbfilter_byte2.h  mbfilter_byte4.c  mbfilter_byte4.h  mbfilter_cp1251.c  mbfilter_cp1251.h  mbfilter_cp1252.c  mbfilter_cp1252.h  mbfilter_cp1254.c  mbfilter_cp1254.h  mbfilter_cp5022x.c  mbfilter_cp5022x.h  mbfilter_cp51932.c  mbfilter_cp51932.h  mbfilter_cp850.c  mbfilter_cp850.h  mbfilter_cp866.c  mbfilter_cp866.h  mbfilter_cp932.c  mbfilter_cp932.h  mbfilter_cp936.c  mbfilter_cp936.h  (+128 more)
mbfl/: .cvsignore  Makefile.am  Makefile.bcc32  eaw_table.h  mbfilter.c  mbfilter.h  mbfilter_8bit.c  mbfilter_8bit.h  mbfilter_pass.c  mbfilter_pass.h  mbfilter_wchar.c  mbfilter_wchar.h  mbfl_allocators.c  mbfl_allocators.h  mbfl_arraylist.c  mbfl_arraylist.h  mbfl_buffer_converter.c  mbfl_buffer_converter.h  mbfl_collection.c  mbfl_collection.h  mbfl_consts.h  mbfl_convert.c  mbfl_convert.h  mbfl_defs.h  mbfl_encoding.c  mbfl_encoding.h  mbfl_filter_output.c  mbfl_filter_output.h  mbfl_ident.c  mbfl_ident.h  mbfl_iterator.c  mbfl_iterator.h  mbfl_language.c  mbfl_language.h  mbfl_list.c  mbfl_list.h  mbfl_memory_device.c  mbfl_memory_device.h  mbfl_mutex.c  mbfl_mutex.h  (+6 more)
nls/: .cvsignore  Makefile.am  Makefile.bcc32  nls_de.c  nls_en.c  nls_ja.c  nls_kr.c  nls_ru.c  nls_uni.c  nls_zh.c
tests/: .cvsignore  Makefile.am  conv_encoding  conv_encoding.c  conv_kana  conv_kana.c  emoji.c  mk_emoji_tbl.pl  strcut.c  strwidth.c
tests/conv_encoding.tests/: Makefile.am  gen_exp.c  yensign.exp
tests/conv_kana.tests/: .cvsignore  conv_kana.exp
tests/strcut.tests/: ujis.exp  utf8.exp
