SUBDIRS=conv_encoding.tests conv_kana.tests strwidth.tests
noinst_PROGRAMS=conv_encoding conv_kana strwidth
conv_encoding_SOURCES=conv_encoding.c
conv_encoding_LDADD=../mbfl/libmbfl.la
conv_kana_SOURCES=conv_kana.c
conv_kana_LDADD=../mbfl/libmbfl.la
strwidth_SOURCES=strwidth.c
strwidth_LDADD=../mbfl/libmbfl.la
